#1100 - do not fail when option is blank (#1102)